--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -123,14 +123,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingBottom="15dp">
 
                 <LinearLayout
                     android:id="@+id/ll_favorite"
                     style="@style/ServiceOrdersMenu">
 
                     <ImageView
-                        style="@style/ServiceMyMenuIcon"
+                        style="@style/ServiceOrdersMenuIcon"
                         android:src="@mipmap/service_my_ic_favorite"/>
 
                     <TextView
@@ -143,7 +144,7 @@
                     style="@style/ServiceOrdersMenu">
 
                     <ImageView
-                        style="@style/ServiceMyMenuIcon"
+                        style="@style/ServiceOrdersMenuIcon"
                         android:src="@mipmap/service_my_ic_coupons"/>
 
                     <TextView
@@ -156,7 +157,7 @@
                     style="@style/ServiceOrdersMenu">
 
                     <ImageView
-                        style="@style/ServiceMyMenuIcon"
+                        style="@style/ServiceOrdersMenuIcon"
                         android:src="@mipmap/service_my_ic_other"/>
 
                     <TextView
