--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,10 +3,11 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    
+
     <android.support.v4.view.ViewPager
+        android:id="@+id/vp_home_looping_img"
         android:layout_width="match_parent"
-        android:layout_height="120dp"/>
+        android:layout_height="180dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
