--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,10 +4,23 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_home_looping_img"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"/>
+        android:layout_height="wrap_content">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_home_looping_img"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"/>
+
+        <LinearLayout
+            android:id="@+id/ll_home_loop_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="3dp"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="12dp"/>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
