--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:button">@null</item>
+        <item name="android:background">@null</item>
         <item name="android:textColor">@drawable/selector_text_bottom_tag</item>
         <item name="android:drawablePadding">3dp</item>
         <item name="android:textSize">9sp</item>
