--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,7 +109,7 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginTop="20dp"/>
 
-    <View
+    <Space
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="0dp"/>
