--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,35 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.tcl.lishanwang.oneshop.activity.LoginActivity">
+    tools:context="com.tcl.lishanwang.oneshop.activity.LoginActivity"
+    xmlns:tcl="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.Toolbar
+    <com.tcl.lishanwang.oneshop.view.GeneralToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary">
-        <LinearLayout
-            style="@style/ToolbarLinearLayoutContainer"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_toolbar_back"
-                style="@style/ToolbarImageView"
-                android:src="@drawable/selector_toolbar_back"/>
-
-            <TextView
-                style="@style/ToolbarMiddleTextView"
-                android:text="@string/login"/>
-
-            <TextView
-                android:id="@+id/tv_sign_in"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:clickable="true"
-                android:text="@string/sign_in"
-                android:textSize="14sp"
-                android:textColor="@drawable/selector_color_toolbar_text"/>
-        </LinearLayout>
-    </android.support.v7.widget.Toolbar>
+        tcl:title = "@string/login"
+        tcl:isRightImgShow="false"/>
 
     <LinearLayout
         android:layout_width="match_parent"
