--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,7 +101,7 @@
         <item name="android:background">@drawable/selector_bg_category_left_item</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@drawable/selector_category_left_text_color</item>
+        <item name="android:textColor">@drawable/selector_text_color_general</item>
         <item name="android:lines">2</item>
         <item name="android:lineSpacingExtra">5dp</item>
     </style>
@@ -127,6 +127,16 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_marginEnd">@dimen/activity_horizontal_margin</item>
+    </style>
+
+    <style name="SortFilterRadioButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:button">@null</item>
+        <item name="android:background">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@drawable/selector_text_color_general</item>
     </style>
 
 </resources>
