--- a/app/src/main/res/layout/activity_commodity_list.xml
+++ b/app/src/main/res/layout/activity_commodity_list.xml
@@ -14,76 +14,159 @@
         tcl:isRightImgShow="true"
         tcl:title="Phone"/>
 
-    <LinearLayout
-        android:id="@+id/ll_sort_filter_container"
+    <RelativeLayout
+        android:id="@+id/rl_sort_filter_container"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="@color/colorWhite"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/activity_horizontal_margin">
+        android:layout_height="wrap_content">
 
         <RadioGroup
             android:id="@+id/rg_sort_filter"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="46dp"
+            android:background="@color/colorWhite"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/activity_horizontal_margin">
 
             <RadioButton
                 android:id="@+id/rb_recommend"
+                style="@style/SortFilterRadioButton"
                 android:layout_marginEnd="20dp"
-                android:text="Recommend"
-                style="@style/SortFilterRadioButton"/>
+                android:text="Recommend"/>
 
             <RadioButton
                 android:id="@+id/rb_new"
+                style="@style/SortFilterRadioButton"
                 android:layout_marginEnd="20dp"
-                android:text="New"
-                style="@style/SortFilterRadioButton"/>
+                android:text="New"/>
 
             <RadioButton
                 android:id="@+id/rb_price_ranking"
+                style="@style/SortFilterRadioButton"
                 android:layout_marginEnd="3dp"
-                android:text="Price ranking"
-                style="@style/SortFilterRadioButton"/>
+                android:text="Price ranking"/>
         </RadioGroup>
 
         <ImageView
             android:id="@+id/iv_price_ranking"
             android:layout_width="6dp"
-            android:layout_height="match_parent"
+            android:layout_height="46dp"
+            android:layout_toEndOf="@id/rg_sort_filter"
+            android:background="@color/colorWhite"
             android:src="@drawable/product_screen_nprice_uncheck"/>
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/iv_show_style"
+            android:layout_width="50dp"
+            android:layout_height="46dp"
+            android:background="@color/colorWhite"
+            android:layout_alignParentEnd="true"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:src="@drawable/product_btn_list"/>
 
-        <View
+        <Space
+            android:id="@+id/space_show_style"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
+            android:layout_height="46dp"
+            android:layout_toStartOf="@id/iv_show_style"
             android:background="@color/colorBackground"/>
 
         <ImageView
             android:id="@+id/iv_filter"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:layout_height="46dp"
+            android:background="@color/colorWhite"
+            android:layout_toStartOf="@id/space_show_style"
             android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
             android:src="@drawable/product_btn_screen_nor"/>
 
-        <View
+        <Space
+            android:id="@+id/space_filter"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorBackground"/>
+            android:layout_height="46dp"
+            android:layout_toStartOf="@id/iv_filter"/>
 
-        <ImageView
-            android:id="@+id/iv_show_style"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_toStartOf="@id/space_filter"
+            android:layout_toEndOf="@id/iv_price_ranking"
+            android:background="@color/colorWhite"/>
+
+
+        <LinearLayout
+            android:id="@+id/ll_filter_drop_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:layout_below="@id/iv_filter"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:src="@drawable/product_btn_list"/>
-    </LinearLayout>
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:visibility="invisible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:text="Range"
+                android:textSize="14sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="18dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="33dp"
+                    android:gravity="center"
+                    android:text="idol"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:text="Serial"
+                android:textSize="14sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="18dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="33dp"
+                    android:gravity="center"
+                    android:text="Octa-Core"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Show only preferential goods"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Show only goods in stock"/>
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/v_shadow_behind"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/ll_filter_drop_menu"
+            android:background="#00000000"/>
+    </RelativeLayout>
 
 </LinearLayout>
