--- a/app/src/main/res/layout/activity_commodity_list.xml
+++ b/app/src/main/res/layout/activity_commodity_list.xml
@@ -94,6 +94,12 @@
             android:layout_toEndOf="@id/iv_price_ranking"
             android:background="@color/colorWhite"/>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_commodity"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/rg_sort_filter"
+            android:layout_marginTop="1dp"/>
 
         <LinearLayout
             android:id="@+id/ll_filter_drop_menu"
@@ -165,8 +171,7 @@
             android:id="@+id/v_shadow_behind"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/ll_filter_drop_menu"
-            android:background="#00000000"/>
+            android:layout_below="@+id/ll_filter_drop_menu"/>
     </RelativeLayout>
 
 </LinearLayout>
