--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,5 +138,10 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@drawable/selector_text_color_general</item>
     </style>
+    
+    <style name="CommodityInfoTabLayout" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 </resources>
