Set shadow view can be clickable to intercept touch event of RecyclerView.

--- a/app/src/main/res/layout/activity_commodity_list.xml
+++ b/app/src/main/res/layout/activity_commodity_list.xml
@@ -171,7 +171,9 @@
             android:id="@+id/v_shadow_behind"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/ll_filter_drop_menu"/>
+            android:layout_below="@+id/ll_filter_drop_menu"
+            android:clickable="true"
+            android:visibility="gone"/>
     </RelativeLayout>
 
 </LinearLayout>
