--- a/app/src/main/res/layout/item_category_right.xml
+++ b/app/src/main/res/layout/item_category_right.xml
@@ -23,11 +23,11 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="1dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="4dp"
         android:layout_toEndOf="@id/iv_item_category_right"
-        android:background="#66999999"/>
+        android:background="@color/colorBackground"/>
 
 </RelativeLayout>
