Create simple GoodsFragment layout framework.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorGray">#666666</color>
     <color name="colorDarkGray">#333333</color>
     <color name="colorRed">#FF0000</color>
+    <color name="colorDivideLine">#DDDDDD</color>
 </resources>
