--- a/app/src/main/res/layout/activity_commodity_info.xml
+++ b/app/src/main/res/layout/activity_commodity_info.xml
@@ -20,6 +20,7 @@
         android:id="@+id/tl_commodity_info"
         android:layout_width="match_parent"
         android:layout_height="44dp"
+        android:layout_marginBottom="1dp"
         app:tabBackground="@color/colorWhite"
         app:tabSelectedTextColor="@color/colorAccent"
         app:tabTextAppearance="@style/ServiceMenuTitleText"
