--- a/app/src/main/res/layout/item_commodity_list.xml
+++ b/app/src/main/res/layout/item_commodity_list.xml
@@ -54,6 +54,7 @@
         android:background="@color/colorBackground"/>
 
     <ImageView
+        android:id="@+id/iv_item_commodity_cart"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:layout_alignBottom="@id/iv_item_commodity"
@@ -62,4 +63,11 @@
         android:layout_marginStart="15dp"
         android:clickable="true"
         android:src="@drawable/selector_item_commodity_cart"/>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="30dp"
+        android:background="@color/colorBackground"
+        android:layout_alignBottom="@id/iv_item_commodity"
+        android:layout_toStartOf="@id/iv_item_commodity_cart"/>
 </RelativeLayout>
