--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -9,9 +9,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
+        <com.tcl.lishanwang.oneshop.view.AutoScrollViewPager
+            android:id="@+id/vp_goods_img"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="180dp"
             android:background="@color/colorWhite"/>
 
         <LinearLayout
@@ -105,9 +106,9 @@
                 style="@style/GoodsTitleTextView"
                 android:text="Offer package"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+            <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"/>-->
         </LinearLayout>
 
         <include layout="@layout/divider_line_bold"/>
