--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v4.view.ViewPager
+        <com.tcl.lishanwang.oneshop.view.AutoScrollViewPager
             android:id="@+id/vp_home_looping_img"
             android:layout_width="match_parent"
             android:layout_height="180dp"/>
