--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -100,15 +100,17 @@
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            android:paddingStart="15dp">
+            android:paddingStart="15dp"
+            android:paddingBottom="18dp">
 
             <TextView
                 style="@style/GoodsTitleTextView"
                 android:text="Offer package"/>
 
-            <!--<android.support.v7.widget.RecyclerView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_offer_package"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
         <include layout="@layout/divider_line_bold"/>
