--- a/app/src/main/res/layout/item_offer_package.xml
+++ b/app/src/main/res/layout/item_offer_package.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:layout_marginEnd="25dp"
               android:gravity="center"
-              android:orientation="vertical"
-    android:layout_marginEnd="25dp">
+              android:orientation="vertical">
 
     <ImageView
         android:layout_width="75dp"
@@ -15,6 +15,7 @@
         android:src="@mipmap/avatar_default"/>
 
     <TextView
+        android:id="@+id/tv_price_item_offer_package"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add $1 to buy"
