--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -151,4 +151,16 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="CommentsFilterCheckedTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">24dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@drawable/selector_text_color_chose_colors</item>
+        <item name="android:background">@drawable/selector_bg_chose_colors</item>
+    </style>
+
 </resources>
