--- a/app/src/main/res/layout/activity_commodity_list.xml
+++ b/app/src/main/res/layout/activity_commodity_list.xml
@@ -58,8 +58,8 @@
             android:id="@+id/iv_show_style"
             android:layout_width="50dp"
             android:layout_height="46dp"
-            android:background="@color/colorWhite"
             android:layout_alignParentEnd="true"
+            android:background="@color/colorWhite"
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:src="@drawable/product_btn_list"/>
@@ -74,8 +74,8 @@
             android:id="@+id/iv_filter"
             android:layout_width="50dp"
             android:layout_height="46dp"
-            android:background="@color/colorWhite"
             android:layout_toStartOf="@id/space_show_style"
+            android:background="@color/colorWhite"
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:src="@drawable/product_btn_screen_nor"/>
@@ -89,8 +89,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:layout_toStartOf="@id/space_filter"
             android:layout_toEndOf="@id/iv_price_ranking"
+            android:layout_toStartOf="@id/space_filter"
             android:background="@color/colorWhite"/>
 
         <android.support.v7.widget.RecyclerView
@@ -104,12 +104,13 @@
             android:id="@+id/ll_filter_drop_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/iv_filter"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            android:layout_below="@id/iv_filter"
-            android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
+            android:clickable="true"
             android:visibility="invisible">
 
             <TextView
