--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -163,4 +163,12 @@
         <item name="android:background">@drawable/selector_bg_chose_colors</item>
     </style>
 
+    <style name="TranslucentTestStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">#FFF</item>
+        <item name="android:layout_marginBottom">2dp</item>
+    </style>
+
 </resources>
